proceso carro final

--- a/template.html
+++ b/template.html
@@ -34,5 +34,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!-- Add step #2 -->
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <script>
+      const mp = new MercadoPago("YOUR_PUBLIC_KEY");
+      // Add step #3
+    </script>
   </body>
 </html>
